2010-08-11 Patrick Galbraith <patg@patg.net> (4.017)
* BUG #60085, Andreas Koenig's patch for DBI changes
* Updated documents

2010-07-10 Patrick Galbraith <patg@patg.net> (4.016)
* Disabled mysql_bind_type_guessing due to one performance issue 
  querying on a indexed character column unquoted will mean the index 
  is not used
* Fixed int types that should be bools

2010-07-09 Patrick Galbraith <patg@patg.net> (4.015)
* BUG #56664 fixed t/40blobs.t skip_all logic (W. Phillip Moore)
* BUG #57253 Fixed iteration past end of string (crash). (Chris Butler)
* Added a new parameter for old behavior- mysql_bind_comment_placeholders which 
  will make it possible to have placeholders bound for those who really 
  want that behavior.
* Fixed bind_type_guessing - always on now 

2010-04-14 Patrick Galbraith <patg@patg.net> (4.014)
* BUG #30033 Fixed handling of comments to allow comments that contain characters
  that might otherwise cause placeholder detection to not work properly
* BUG #53844, Fix for memory leak in stats. (Gregory Burmistrov)
* BUG #49719, Fix for handling of NULLs in prepared statements (Gert Pache)
* BUG #55627, Fix for testing failure due to strict mode (Yves) 
* BUG #51784, Fix for mysqladmin on Windows in Makefile (Zeeshan Muhammad)
* BUG #41630, Typo in Makefile
* Had to define true and false in dbdimp.h. Didn't work out of the box on Linux

2009-09-16 Patrick Galbraith <patg@patg.net> (4.013)

* #49484: PATCH add support for MYSQL_INIT_COMMAND - Peter John Edwards 
* #48242: 'mysql_bind_type_guessing' doesn't work correctly
with minus sign - Thanks Serguei Trouchelle!
* #45616: t/40blobs.t cannot pass without database access - 
ServerError() not declared - Thanks ysth http://ysth.livejournal.com/

2009-06-18 Patrick Galbraith <patg@patg.net> (4.012)

* Patch to bind_type_guessing from Craigslist, 
  Thanks to Chris! Happiness is no quoted numbers. 
  Fixed ChopBlanks to work with bind_type_guessing
* Patch for win32 strawberry build 